setup structure for french strings, added values-fr folder and strings.xml

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">mCommonJobs</string>
+    <string name="main_menu_profile_title">profile</string>
 </resources>
