--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -1,10 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-     <string name="main_menu_profile_title">profil</string>
+     <string name="main_menu_profile_title">Profil</string>
      <string name="profile_setup_title">Configuration du Profil</string>
      <string name="select_photo_title">Sélectionnez une photo</string>
      <string name="first_name_title">Prénom</string>
      <string name="last_name_title">Nom</string>
      <string name="skills_title">Compétences</string>
      <string name="continue_btn_title">Accéder</string>
+     <string name="main_menu_search">Reserche</string>
+     <string name="main_menu_add_job">Ajouter un Emploi</string>
 </resources>
