--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,21 @@
 <resources>
-    <string name="app_name">mCommonJobs</string>
+    <string name="app_name" translatable="false">mCommonJobs</string>
+    <string name="main_menu_profile_title">Profile</string>
+    <string name="profile_setup_title">Profile Setup</string>
+    <string name="select_photo_title">Select a photo</string>
+    <string name="first_name_title">First name</string>
+    <string name="last_name_title">Last name</string>
+    <string name="skills_title">Skills</string>
+    <string name="continue_btn_title">Continue</string>
+    <string name="job_seeker">Job Seeker</string>
+    <string name="job_provider">Job Provider</string>
+    <string name="main_menu_search">Search</string>
+    <string name="main_menu_add_job">Add Job</string>
+    <string name="create_posting">Create Posting</string>
+    <string name="select_category">Select Category</string>
+    <string name="continue_btn">Continue ></string>
+    <string name="messages">Messages</string>
+    <string name="job_desc_hint">Add description here.</string>
+    <string name="email">Email</string>
+    <string name="select_user">"Select User: "</string>
 </resources>
