--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,5 +18,5 @@
     <string name="messages">Messages</string>
     <string name="job_desc_hint">Add description here.</string>
     <string name="email">Email</string>
-    <string name="select_user">"Select User: "</string>
+    <string name="select_user">"Account Setup"</string>
 </resources>
