--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -19,4 +19,5 @@
     <string name="job_desc_hint">Add description here.</string>
     <string name="email">Email</string>
     <string name="select_user">"Account Setup"</string>
+    <string name="rating">Rating</string>
 </resources>
