--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -20,4 +20,5 @@
     <string name="email">Email</string>
     <string name="select_user">"Account Setup"</string>
     <string name="rating">Rating</string>
+    <string name="title_activity_seeker_ratings_list">SeekerRatingsListActivity</string>
 </resources>
