Moved all hardcoded android:text values to the strings.xml file.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -21,4 +21,82 @@
     <string name="select_user">"Account Setup"</string>
     <string name="rating">Rating</string>
     <string name="title_activity_seeker_ratings_list">SeekerRatingsListActivity</string>
+    <string name="addprofile">addProfile</string>
+    <string name="select_years_of_experience">Select years of experience</string>
+    <string name="_1_3_years">1-3 years</string>
+    <string name="_4_6_years">4-6 years</string>
+    <string name="_6_years">6+ years</string>
+    <string name="select_avaliblity">Select avaliblity</string>
+    <string name="only_day">ONLY DAY</string>
+    <string name="only_night">ONLY NIGHT</string>
+    <string name="day_or_night">DAY OR NIGHT</string>
+    <string name="enter_expected_wage">Enter expected wage</string>
+    <string name="apply">APPLY</string>
+    <string name="select_category_create_posting">SELECT CATEGORY</string>
+    <string name="apply_job">Apply</string>
+    <string name="share_job">Share</string>
+    <string name="menu_provider">Menu</string>
+    <string name="menu_seeker">Menu</string>
+    <string name="viewjobs_profile_jobs">ViewJobs profile jobs</string>
+    <string name="profile_seeker">Profile</string>
+    <string name="view_all_jobs">View All Jobs</string>
+    <string name="ratings_seeker">Ratings</string>
+    <string name="view_your_pending_applications">View your pending applications</string>
+    <string name="view_shared_jobs">View Shared Jobs</string>
+    <string name="employees">Employees</string>
+    <string name="jobs_offered">Jobs Offered</string>
+    <string name="attitude_provider">Attitude:</string>
+    <string name="punctuality">Punctuality:</string>
+    <string name="cleanliness">Cleanliness:</string>
+    <string name="comment_150_characters_max_provider">Comment (150 characters max):</string>
+    <string name="submit_provider">Submit</string>
+    <string name="rating_menu_provider">Rating Menu</string>
+    <string name="rate_a_job_seeker">Rate a job seeker</string>
+    <string name="view_my_ratings_provider">View My Ratings</string>
+    <string name="my_ratings_provider">My Ratings</string>
+    <string name="average_rating_provider">Average rating:</string>
+    <string name="attitude_provider_rating">Attitude:</string>
+    <string name="helpfulness">Helpfulness:</string>
+    <string name="quality_of_work_environment">Quality of work environment:</string>
+    <string name="comment_provider">Comment:</string>
+    <string name="employers">Employers</string>
+    <string name="attitude_seeker">Attitude:</string>
+    <string name="helpfulness_seeker">Helpfulness:</string>
+    <string name="quality_of_work_environment_seeker">Quality of work environment:</string>
+    <string name="comment_150_characters_max_seeker">Comment (150 characters max):</string>
+    <string name="submit_seeker">Submit</string>
+    <string name="rating_menu_seeker">Rating Menu</string>
+    <string name="rate_a_job_provider">Rate a job provider</string>
+    <string name="view_my_ratings_seeker">View My Ratings</string>
+    <string name="my_ratings_seeker">My Ratings</string>
+    <string name="average_rating_seeker">Average rating:</string>
+    <string name="attitude_seeker_rating">Attitude:</string>
+    <string name="punctuality_seeker_rating">Punctuality:</string>
+    <string name="cleanliness_seeker_rating">Cleanliness:</string>
+    <string name="comment_seeker_rating">Comment:</string>
+    <string name="continue_account_setup">Continue</string>
+    <string name="enter_code">Enter Code</string>
+    <string name="please_check_your_text_n_messages_we_sent_you_a_code">Please check your text   messages, we sent you a code!</string>
+    <string name="phone_number_hint">phone number</string>
+    <string name="submit_confirmation_code">Submit</string>
+    <string name="confirm_code">Confirm</string>
+    <string name="type_of_job_applied_for">Type of Job Applied for</string>
+    <string name="name_of_applicant">Name of applicant</string>
+    <string name="years_of_experience">years of experience</string>
+    <string name="availibility">availibility</string>
+    <string name="expected_wage">Expected Wage</string>
+    <string name="accept_applicant">Accept Applicant</string>
+    <string name="applicants">Applicants</string>
+    <string name="available_jobs">Available Jobs</string>
+    <string name="your_pending_applications">Your pending applications</string>
+    <string name="please_select_a_profile_you_wish_to_continue_as">Please select a profile you wish to continue as</string>
+    <string name="applicant_fragment">Applicant</string>
+    <string name="job">Job</string>
+    <string name="job_title">Job title</string>
+    <string name="description">Description</string>
+    <string name="job_title_fragment">Job Title</string>
+    <string name="job_fragment">Job:</string>
+    <string name="job_applied_for">Job applied for</string>
+    <string name="current_status">Current Status:</string>
+    <string name="status">Status</string>
 </resources>
