Translated the strings.xml values to French.

--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -18,4 +18,103 @@
      <string name="job_seeker">Chercheur d\'Emploi</string>
      <string name="email">Email</string>
      <string name="select_user">"Sélectionner un Usager: "</string>
+    <string name="_1_3_years">1-3 ans</string>
+     <string name="_4_6_years">4-6 ans</string>
+     <string name="_6_years">6 ans</string>
+     <string name="accept_applicant">Accépter l\'appliaquant</string>
+     <string name="addprofile">Ajouter Profile</string>
+     <string name="applicant_fragment">Appliquant</string>
+     <string name="applicants">Appliquant</string>
+     <string name="apply">APPLIQUER</string>
+     <string name="apply_job">Apliquer</string>
+     <string name="attitude_provider">Attitude:</string>
+     <string name="attitude_provider_rating">Attitude:</string>
+     <string name="attitude_seeker">Attitude:</string>
+     <string name="attitude_seeker_rating">Attitude:</string>
+     <string name="available_jobs">Emplois Displonibles</string>
+     <string name="availibility">disponibilité</string>
+     <string name="average_rating_provider">Évaluation moyenne</string>
+     <string name="average_rating_seeker">Évaluations moyenne</string>
+     <string name="cleanliness">Propreté:</string>
+     <string name="cleanliness_seeker_rating">Propreté:</string>
+     <string name="comment_150_characters_max_provider">Commentaire (150 charactères max):</string>
+     <string name="comment_150_characters_max_seeker">Commentaire (150 charactères max)</string>
+     <string name="comment_provider">Commentaire:</string>
+     <string name="comment_seeker_rating">Commentaire:</string>
+     <string name="confirm_code">Confirmer</string>
+     <string name="continue_account_setup">Continuer</string>
+     <string name="current_status">Status Actuel</string>
+     <string name="day_or_night">JOUR OU NUIT</string>
+     <string name="description">Description</string>
+     <string name="employees">Employers</string>
+     <string name="employers">Employeurs</string>
+     <string name="enter_code">Entrer le code</string>
+     <string name="enter_expected_wage">Entrer le salaire désiré</string>
+     <string name="expected_wage">Salaire désiré</string>
+     <string name="helpfulness">Aide:</string>
+     <string name="helpfulness_seeker">Aide:</string>
+     <string name="job">Emploi</string>
+     <string name="job_applied_for">Emplois appliqués</string>
+     <string name="job_fragment">Emploi:</string>
+     <string name="job_posting_created">Affichage d\'emploi créée</string>
+     <string name="job_posting_error">Affiche d\'emploi invalide</string>
+     <string name="job_title">Titre d\'emploi</string>
+     <string name="job_title_fragment">Titre d\'Emploi</string>
+     <string name="jobs_offered">Emplois Offerts</string>
+     <string name="main_menu_view_applicants">Voir Applicants</string>
+     <string name="menu_provider">Menu</string>
+     <string name="menu_seeker">Menu</string>
+     <string name="my_ratings_provider">Mes Évaluations</string>
+     <string name="my_ratings_seeker">Mes Évaluations</string>
+     <string name="name_of_applicant">Nom de l\'appliquant</string>
+     <string name="only_day">JOUR UNIQUEMENT</string>
+     <string name="only_night">SOIR UNIQUEMENT</string>
+     <string name="phone_number_hint">numéro de téléphone</string>
+     <string name="please_check_your_text_n_messages_we_sent_you_a_code">Veuillez s\'il vous plait regarder vos messages textes. On vous a envoyé un code.</string>
+     <string name="please_select_a_profile_you_wish_to_continue_as">Veuillez sélectionner un profil avec lequel vous allez continuer</string>
+     <string name="profile_seeker">Profile</string>
+     <string name="punctuality">Ponctualité:</string>
+     <string name="punctuality_seeker_rating">Ponctualité:</string>
+     <string name="quality_of_work_environment">Qualité de l\'environement de travail:</string>
+     <string name="quality_of_work_environment_seeker">Qualité de l\'environement de travail:</string>
+     <string name="rate_a_job_provider">Évaluer un fournisseur d\'emploi</string>
+     <string name="rate_a_job_seeker">Évaluer un chercheur d\'emploi</string>
+     <string name="rating">Évaluation</string>
+     <string name="rating_menu_provider">Menu d\'évaluation</string>
+     <string name="rating_menu_seeker">Menu d\'évaluation</string>
+     <string name="ratings_seeker">Évaluations</string>
+     <string name="select_avaliblity">Sélectionnez votre disponibilité</string>
+     <string name="select_category_create_posting">SÉKECTIONNER UNE CATÉGORIE</string>
+     <string name="select_years_of_experience">Sélectionner les années d\'expérience</string>
+     <string name="share_job">Partager</string>
+     <string name="status">Status</string>
+     <string name="submit_confirmation_code">Soumettre</string>
+     <string name="submit_provider">Soumettre</string>
+     <string name="submit_seeker">Soumettre</string>
+     <string name="applicant_accepted">Appliquant accepté et notifié</string>
+ <string name="type_of_job_applied_for">Type d\'emploi appliqué</string>
+     <string name="view_all_jobs">Voir Tous Les Emplois</string>
+     <string name="view_my_ratings_provider">Voir Mes Évaluations</string>
+     <string name="view_my_ratings_seeker">Voir Mes Évaluations</string>
+     <string name="view_shared_jobs">Voir Les Emplois Partagés</string>
+     <string name="view_your_pending_applications">Voir mes applications en attente</string>
+     <string name="years_of_experience">années d\'expérience</string>
+     <string name="your_pending_applications">Mes applications en attente</string>
+     <string name="viewjobs_profile_jobs">Voir Profile d\'Emplois</string>
+ <string name="application_sent">Application Envoyée</string>
+ <string name="cancel">ANNULER</string>
+ <string name="confirmation_codes_matched">Codes de confirmation compatibles!</string>
+ <string name="confirmation_codes_not_matched">Codes de confirmation non compatibles!</string>
+ <string name="image_uploaded_successfully">Image téléchargée</string>
+ <string name="job_seeker_rating_registered">Évaluation du chercheur d\'emploi enregistrée</string>
+ <string name="please_enter_your_confirmation_code">S\'il vous plait entrer votre code de confirmation.</string>
+ <string name="please_enter_your_phone_number">S\'il vous plait entrer votre numéro de téléphone</string>
+ <string name="rating_registered_provider">Évaluation enregistrée</string>
+ <string name="rating_submitted">Évaluation Soumise</string>
+ <string name="rating_submitted_seeker">Évaluation Soumise</string>
+ <string name="share">PARTAGER</string>
+ <string name="share_this_job_to_a_user">Partager cet emploi à un usager</string>
+    <string name="click_here_to_add_a_new_profile">cliquez ici pour ajouter un nouveau profile</string>
+    <string name="view_account_details">Voir les détails du compte</string>
+    <string name="you_have_applications_that_have_been_accepted">Vous avez des applicatins qui ont été acceptées, veuillez consulter Voir Mes Applications En Attente</string>
 </resources>
